# xk1

./: Cargo.toml  README.md  convert_to_rgb565-Full.py  convert_to_rgb565.py
.embuild/espressif/: espidf.constraints.v5.2.txt
examples/: st7789.rs
src/: main.rs
