[package]
name = "esp32-drone"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-hal = "0.45.2"  # Required for GPIO control
esp-idf-sys = "0.36.1"  # Required for ESP-IDF integration
anyhow = "1.0"          # For error handling
embedded-hal = "1.0"
libm = "0.2"

mipidsi = "0.5.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"

[build-dependencies]
embuild = "0.33.0"      # For build automation

[dev-dependencies]
